--- a/main.html
+++ b/main.html
@@ -6,38 +6,34 @@
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-    <div class="voiceinator">
+    <h2>Text to Speech Application</h2>
 
-      <h1>The Voiceinator 5000</h1>
+    <label>
+        Enter Text:
+        <textarea id="textInput" placeholder="Type something to speak..."></textarea>
+    </label>
 
-      <select name="voice" id="voices">
-        <option value="">Select A Voice</option>
-      </select>
+    <label>
+        Select Voice:
+        <select id="voiceSelect"></select>
+    </label>
 
-      <label for="rate">Rate:</label>
-      <input name="rate" type="range" min="0" max="3" value="1" step="0.1">
+    <label>
+        Rate:
+        <input type="range" id="rate" min="0.5" max="2" step="0.1" value="1">
+    </label>
 
-      <label for="pitch">Pitch:</label>
+    <label>
+        Pitch:
+        <input type="range" id="pitch" min="0" max="2" step="0.1" value="1">
+    </label>
 
-      <input name="pitch" type="range" min="0" max="2" step="0.1">
-      <textarea name="text">Hello! I love JavaScript 👍</textarea>
-      <button id="stop">Stop!</button>
-      <button id="speak">Speak</button>
-
+    <div class="buttons">
+        <button id="speakBtn">Speak</button>
+        <button id="stopBtn">Stop</button>
     </div>
 
-<script>
-  const msg = new SpeechSynthesisUtterance();
-  let voices = [];
-  const voicesDropdown = document.querySelector('[name="voice"]');
-  const options = document.querySelectorAll('[type="range"], [name="text"]');
-  const speakButton = document.querySelector('#speak');
-  const stopButton = document.querySelector('#stop');
-
-  //Your code goes here
-</script>
-
+    <script src="script.js"></script>
 </body>
 </html>
