--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
   <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
 </head>
-
+<body>
     <h2>Text to Speech Application</h2>
 
     <label>
